--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -27,8 +27,9 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.springframework.boot:spring-boot-starter-mustache'
-	//implementation('org.springframework.boot:spring-boot-starter-security')
-
+	implementation'org.springframework.boot:spring-boot-starter-oauth2-client'
+	testCompileOnly 'org.springframework.security:spring-security-test'
+	compileOnly 'org.springframework.session:spring-session-jdbc'
 
 }
 
